--- a/style_contacts.css
+++ b/style_contacts.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
 
 * {
   box-sizing: border-box;
@@ -6,30 +7,89 @@
   padding: 0;
 }
 
-body {
+ body {
   font-family: 'Open Sans', sans-serif;
   background: #fff;
+  color: #000;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  height: 3vh;
-  width: 100%;
-}
-
-header ul {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-header a {
-  color: #000;
+  padding: 8vh 0;
+  
+  ul {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+  }
+  
+  a {
+  font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
+  padding: 0 1em;
+  color: #000;
+  }
+}
+
+
+.container {
+  position: absolute;
   display: flex;
-  justify-content: center;
-  padding: 30px 20px;
+  justify-content: space-around;
   margin: auto;
+  padding: 0 8%;
+  font-family: 'Poopins', sans-serif;
+
+  height: 75vh;
+  width: 100vw;
+
+.cont {
+  position: relative;
+  width: 45%;
+  float:left;
+  padding:5%;
+
+  border-radius: 30px;
+  -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+  -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+  box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+
+  h2 {
+    font-size: calc(18px + 16 * (100vw / 1280));
+    padding-bottom:8%;
+    font-weight: 900;
+  }
+
+  h1 {
+    font-size: calc(10px + 16 * (100vw / 1280));
+    padding-bottom: 3%;
+    color: rgb(105, 0, 0);
+  }
+  
+  p {
+  font-size: calc(5px + 16 * (100vw / 1280));
+  padding-bottom: 8%;
+  }
+}
+
+.descr {
+  width: 45%;
+  float:right;
+  padding-left:5%;
+  padding-top: 5%;
+
+  border-radius: 30px;
+  -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+  -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+  box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+p {
+  font-size: calc(5px + 16 * (100vw / 1280));
+  padding-bottom: 5%;
+}
+h1 {
+  font-size: calc(10px + 16 * (100vw / 1280));
+  padding-bottom: 1%;
+}
+}
 }
