--- a/style_contacts.css
+++ b/style_contacts.css
@@ -34,21 +34,20 @@ header {
 
 
 .container {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: space-around;
-  margin: auto;
+  margin: 0 0 3% 0;
   padding: 0 8%;
   font-family: 'Poopins', sans-serif;
 
-  height: 75vh;
+  height: auto;
   width: 100vw;
 
 .cont {
-  position: relative;
   width: 45%;
   float:left;
-  padding:5%;
+  padding: 5% 5% 3% 5%;
 
   border-radius: 30px;
   -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
@@ -76,20 +75,80 @@ header {
 .descr {
   width: 45%;
   float:right;
-  padding-left:5%;
-  padding-top: 5%;
+  padding: 5%;
 
   border-radius: 30px;
   -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
   -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
   box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-p {
+
+  h2 {
+    font-size: calc(18px + 16 * (100vw / 1280));
+    padding-bottom:8%;
+    font-weight: 900;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: calc(10px + 16 * (100vw / 1280));
+    padding-bottom: 3%;
+    color: rgb(105, 0, 0);
+  }
+  
+  p {
   font-size: calc(5px + 16 * (100vw / 1280));
-  padding-bottom: 5%;
-}
-h1 {
-  font-size: calc(10px + 16 * (100vw / 1280));
-  padding-bottom: 1%;
-}
+  padding-bottom: 8%;
+  }
+
+  .text {
+    border: 1px solid rgba(0, 0, 0, .1);
+    width: 100%;
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: #333;
+  }
+  .text_last{
+    border: 1px solid rgba(0, 0, 0, .1);
+    width: 100%;
+    height: 10%;
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: #333;
+  }
+  
+  .topic {
+    border: 1px solid rgba(0, 0, 0, .1);
+    width: 100%;
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: #333;
+  }
+  .ui-cb-container{
+    margin-bottom: 5%;
+    color: #333;
+
+    
+    padding: 2%;
+    width: 100%;
+   
+
+
+  }
+
+  .btn {
+    margin: 5% 30%;
+    border: 0;
+    border-radius: 20px;
+    text-align: center;
+    justify-content: center;
+    background: #b3002b;
+    color: #fff;
+    padding: 5% 7%;
+    font-weight: 700;
+
+  }
 }
 }
