--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
@@ -6,37 +7,30 @@
   padding: 0;
 }
 
-body {
+ body {
   font-family: 'Open Sans', sans-serif;
   background: #fff;
+  color: #000;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  height: 3vh;
-  width: 100%;
-  margin-bottom: 5%;
-}
-
-header ul {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-header a {
-  color: #000;
+  padding: 8vh 0;
+  
+  ul {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+  }
+  
+  a {
+  font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  display: flex;
-  justify-content: center;
-  padding: 30px 20px;
-  margin: auto;
+  padding: 0 1em;
+  color: #000;
+  }
 }
-
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
-
 
 .card {
   margin: auto;
