--- a/style_contacts.css
+++ b/style_contacts.css
@@ -34,48 +34,22 @@ header {
 
 
 .container {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  margin: 0 0 3% 0;
-  padding: 0 8%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-right: 5vw;
+  margin-left: 5vw;
+  margin-bottom: 3rem;
+  padding: 0;
+  list-style-type: none;
+  
   font-family: 'Poopins', sans-serif;
 
-  height: auto;
-  width: 100vw;
-
-.cont {
-  width: 45%;
-  float:left;
-  padding: 5% 5% 3% 5%;
-
-  border-radius: 30px;
-  -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-
-  h2 {
-    font-size: calc(18px + 16 * (100vw / 1280));
-    padding-bottom:8%;
-    font-weight: 900;
-  }
-
-  h1 {
-    font-size: calc(10px + 16 * (100vw / 1280));
-    padding-bottom: 3%;
-    color: rgb(105, 0, 0);
-  }
-  
-  p {
-  font-size: calc(5px + 16 * (100vw / 1280));
-  padding-bottom: 8%;
-  }
-}
-
 .descr {
-  width: 45%;
-  float:right;
-  padding: 5%;
+  position: relative;
+  display: block;
+  height: 100%;  
+  padding: 10%;
 
   border-radius: 30px;
   -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
@@ -150,5 +124,6 @@ header {
     font-weight: 700;
 
   }
+
 }
 }
