--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #fff;
+  background: #f5f5f5;
+  color: #000;
   height: 3000px;
   margin: 0;
   padding: 0;
@@ -82,13 +83,13 @@ a {
 .hero p {
   font-size: 20px;
   letter-spacing: 1px;
-  color: #fff;
+
 }
 
 .content {
 
   padding: 3% 10%;
-  color: #fff;
+
 }
 
 .partners {
