--- a/style_catalog.css
+++ b/style_catalog.css
@@ -8,15 +8,20 @@
 
  body {
   font-family: 'Open Sans', sans-serif;
-  background: #fff;
+  background: #f5f5f5;
   color: #000;
   margin: 0;
   padding: 0;
 }
 
 header {
-  padding: 8vh 0;
-  
+  padding: 4vh 0;
+
+.nav {
+  padding: 4vh 0;
+  margin: 0 5vw;
+  background-color: #fff;
+
   ul {
     display: flex;
     list-style-type: none;
@@ -28,7 +33,7 @@ header {
   text-decoration: none;
   padding: 0 1em;
   color: #000;
-  }
+  }}
 }
 
 :root {
@@ -42,7 +47,7 @@ header {
   gap: 2rem;
   margin-right: 5vw;
   margin-left: 5vw;
-  margin-bottom: 4rem;
+  margin-bottom: 4vh;
   padding: 0;
   list-style-type: none;
   
@@ -52,12 +57,9 @@ header {
   position: relative;
   display: block;
   height: 100%;  
-  border-radius: calc(var(--curve) * 1px);
+  
   overflow: hidden;
   text-decoration: none;
-  -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
   color: #555555;
 }
 
@@ -77,8 +79,7 @@ header {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;      
-  border-radius: calc(var(--curve) * 1px);    
+  z-index: 1;        
 }
 
 
