--- a/style_contacts.css
+++ b/style_contacts.css
@@ -9,15 +9,20 @@
 
  body {
   font-family: 'Open Sans', sans-serif;
-  background: #fff;
+  background: #f5f5f5;
   color: #000;
   margin: 0;
   padding: 0;
 }
 
 header {
-  padding: 8vh 0;
-  
+  padding: 4vh 0;
+
+.nav {
+  padding: 4vh 0;
+  margin: 0 5vw;
+  background-color: #fff;
+
   ul {
     display: flex;
     list-style-type: none;
@@ -29,7 +34,7 @@ header {
   text-decoration: none;
   padding: 0 1em;
   color: #000;
-  }
+  }}
 }
 
 
@@ -39,22 +44,19 @@ header {
   gap: 2rem;
   margin-right: 5vw;
   margin-left: 5vw;
-  margin-bottom: 3rem;
+  margin-bottom: 4vh;
   padding: 0;
   list-style-type: none;
   
   font-family: 'Poopins', sans-serif;
 
 .descr {
+
   position: relative;
   display: block;
-  height: 100%;  
-  padding: 10%;
-
-  border-radius: 30px;
-  -webkit-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  -moz-box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
-  box-shadow: 0px 0px 16px 3px rgba(71, 97, 116, 0.14);
+  height: 75vh;  
+  padding: 5vh 5vw;
+  background-color: #fff;
 
   h2 {
     font-size: calc(18px + 16 * (100vw / 1280));
