--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
   font-family: 'Open Sans', sans-serif;
   background: #f5f5f5;
   color: #000;
-  height: 3000px;
   margin: 0;
   padding: 0;
 }
@@ -30,7 +29,7 @@ a {
   color: #fff;
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 1em;
+  padding: 0 1vw;
 }
 }
 
@@ -86,27 +85,53 @@ a {
 
 }
 
-.content {
 
-  padding: 3% 10%;
+.content {
+    position: relative;
+    display: flex;
+  
+    padding: 5vh 5vw;
+    margin: 4vw 5vw 4vw 5vw;
+    background-color: #fff;
+  
+    a {
+      font-size: calc(18px + 16 * (100vw / 1280));
+      padding-bottom:8%;
+      font-weight: 900;
+      text-align: center;
+    }
+  
+    h1 {
+      font-size: calc(10px + 16 * (100vw / 1280));
+      padding-bottom: 3%;
+      color: rgb(105, 0, 0);
+    }
+    
+    p {
+    font-size: calc(5px + 16 * (100vw / 1280));
+    padding-bottom: 8%;
+    }
 
 }
 
 .partners {
-  padding: 3% 10%;
-  color: #000;
-  font-size: 24px;
-  text-align: center;
-
+  position: relative;
+    display: flex;  
+    padding: 5vh 5vw;
+    margin: 4vw 5vw 4vw 5vw;
+    background-color: #fff;
   
+    h2 {
+      font-size: calc(18px + 16 * (100vw / 1280));
+      padding-bottom:8%;
+      font-weight: 900;
+      text-align: center;
+    }
 
-  partners_pict {
-    text-align: center;
-  }
+
 
   img {
     margin: 1%;
-    vertical-align: baseline;
   }
 }
 
