--- a/style_catalog.css
+++ b/style_catalog.css
@@ -31,7 +31,7 @@ header {
   a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 1em;
+  padding: 0 1vw;
   color: #000;
   }}
 }
