--- a/catalog/steak1.css
+++ b/catalog/steak1.css
@@ -26,7 +26,7 @@ header {
   a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 1em;
+  padding: 0 1vw;
   color: #000;
   }
 }
