--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -15,27 +15,57 @@ body {
   padding: 0;
 }
 
+
+
+
+li a {
+  text-decoration: none;
+  color: #000;
+}
+
 header {
   padding: 4vh 0;
 
-.nav {
-  padding: 4vh 0;
+nav {
   margin: 0 5vw;
-  background-color: #fff;
-
-  ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: center;
-  }
+  background: #fff;
+  text-align: center;
   
-  a {
+}
+
+span {
+  font-size: calc(10px + 16 * (100vw / 1280));
+  color: #000;
+  padding: 4vh 0;
+  cursor : pointer;
+  display: block;
+  margin: 0%;position: relative; 
+}
+
+
+
+.slide {
+  clear:both;
+  position: absolute;
+  background: #fff;
+  width: 90vw;
+
+  height:0px;
+  overflow: hidden;
+  transition: height .4s ease;
+  z-index: 2;
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 3vw;
   color: #000;
-  }}
 }
+
+.slide li {padding: 4vh 0;}
+
+#touch {position: absolute; opacity: 0; height: 0px;}    
+
+#touch:checked + .slide {height: 50%; z-index: 2;} 
+}
+
 
 .card {
   display: grid;
@@ -49,20 +79,11 @@ header {
   
   font-family: 'Poopins', sans-serif;
 
-.pic {
-  position: relative;
-  display: block;
-  height: 75vh;  
-  padding: 5vh 5vw;
-  background-color: #fff;
-  text-align: center;
-  
-  img {
+img {
   height: 100%;
   max-width: 100%;
-  
 }
-}
+
 
 .txt {
   position: relative;
