--- a/style.css
+++ b/style.css
@@ -8,32 +8,36 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #f5f5f5;
+  background: #fff;
   color: #000;
   margin: 0;
   padding: 0;
 }
 
 header {
-  position: absolute;
-  width: 100vw;
+  width: 90%;
   padding: 8vh 0;
+  margin: 0 5%;
 
-ul {
-  display: flex;
-  list-style-type: none;
+  position: absolute;
   justify-content: center;
-}
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
 
-a {
-  color: #fff;
+  ul {
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+  }
+  
+  a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
   padding: 0 3vw;
+  color: #ffffff;
+  }
 }
-}
-
-
 
 .hero {
   background: url('https://images.unsplash.com/photo-1632083000159-8e17b5ae7fd5?q=80&w=2875&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
