--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -15,61 +15,69 @@ body {
   padding: 0;
 }
 
-
-
-
-li a {
-  text-decoration: none;
-  color: #000;
-}
-
 header {
-  padding: 4vh 0;
+  width: 90%;
+  height: 12vh;
+  margin: 4vh 5%;
+  padding: 0;
 
-nav {
-  margin: 0 5vw;
   background: #fff;
-  text-align: center;
-  
-}
+  position: absolute;
+  z-index: 2;
 
 span {
-  font-size: calc(10px + 16 * (100vw / 1280));
-  color: #000;
-  padding: 4vh 0;
+  height: 6vh;
+  margin: 3vh auto;
   cursor : pointer;
-  display: block;
-  margin: 0%;position: relative; 
+  display: flex;
+  font-size: calc(10px + 16 * (100vw / 1280));
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  position: relative; 
 }
 
-
-
 .slide {
-  clear:both;
-  position: absolute;
+  height: 0;
+  width: 100%;
   background: #fff;
-  width: 90vw;
-
-  height:0px;
+  
+  
+  position: absolute;
   overflow: hidden;
   transition: height .4s ease;
   z-index: 2;
+
+li {
+  padding: 4vh 0;
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
   color: #000;
 }
-
-.slide li {padding: 4vh 0;}
+}
 
 #touch {position: absolute; opacity: 0; height: 0px;}    
 
-#touch:checked + .slide {height: 50%; z-index: 2;} 
+#touch:checked + .slide {height: 450%; z-index: 2; } 
 }
 
+.pust {
+  width: 100%;
+  height: 20vh;
+}
 
 .card {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 2rem;
   margin-right: 5vw;
   margin-left: 5vw;
@@ -88,10 +96,15 @@ img {
 .txt {
   position: relative;
   display:flex;
-  padding: 5vh 5vw;
+  padding: 8%;
   background-color: #fff;
+  
+
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
   align-items: center;
-  text-align: justify;
+  flex-direction: column;
 
 
 
