--- a/style_contacts.css
+++ b/style_contacts.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
- body {
+body {
   font-family: 'Open Sans', sans-serif;
   background: #f5f5f5;
   color: #000;
@@ -16,25 +16,63 @@
 }
 
 header {
-  padding: 4vh 0;
+  width: 90%;
+  height: 12vh;
+  margin: 4vh 5%;
+  padding: 0;
 
-.nav {
-  padding: 4vh 0;
-  margin: 0 5vw;
-  background-color: #fff;
+  background: #fff;
+  position: absolute;
+  z-index: 2;
 
-  ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: center;
-  }
+span {
+  height: 6vh;
+  margin: 3vh auto;
+  cursor : pointer;
+  display: flex;
+  font-size: calc(10px + 16 * (100vw / 1280));
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  position: relative; 
+}
+
+.slide {
+  height: 0;
+  width: 100%;
+  background: #fff;
   
-  a {
+  
+  position: absolute;
+  overflow: hidden;
+  transition: height .4s ease;
+  z-index: 2;
+
+li {
+  padding: 4vh 0;
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 3vw;
   color: #000;
-  }}
+}
+}
+
+#touch {position: absolute; opacity: 0; height: 0px;}    
+
+#touch:checked + .slide {height: 450%; z-index: 2; } 
+}
+
+.pust {
+  width: 100%;
+  height: 20vh;
 }
 
 
@@ -51,10 +89,8 @@ header {
   font-family: 'Poopins', sans-serif;
 
 .descr {
-
   position: relative;
-  display: block;
-  height: 75vh;  
+  display: block;  
   padding: 5vh 5vw;
   background-color: #fff;
 
