--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #fff;
+  background: #f5f5f5;
   color: #000;
   margin: 0;
   padding: 0;
@@ -90,54 +90,30 @@ header {
 }
 
 
+
 .content {
     position: relative;
     display: flex;
+    justify-content: center;
+    align-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poopins', sans-serif;
   
-    padding: 5vh 5vw;
-    margin: 4vw 5vw 4vw 5vw;
+    padding: 8%;
+    margin: 4vh 5%;
     background-color: #fff;
   
-    a {
-      font-size: calc(18px + 16 * (100vw / 1280));
-      padding-bottom:8%;
-      font-weight: 900;
-      text-align: center;
+    p {
+      font-size: calc(5px + 16 * (100vw / 1280));
+      padding-bottom: 2%;
     }
-  
     h1 {
       font-size: calc(10px + 16 * (100vw / 1280));
-      padding-bottom: 3%;
-      color: rgb(105, 0, 0);
+      padding-bottom: 4%;
     }
-    
-    p {
-    font-size: calc(5px + 16 * (100vw / 1280));
-    padding-bottom: 8%;
-    }
+}    
 
-}
-
-.partners {
-  position: relative;
-    display: flex;  
-    padding: 5vh 5vw;
-    margin: 4vw 5vw 4vw 5vw;
-    background-color: #fff;
-  
-    h2 {
-      font-size: calc(18px + 16 * (100vw / 1280));
-      padding-bottom:8%;
-      font-weight: 900;
-      text-align: center;
-    }
-
-
-
-  img {
-    margin: 1%;
-  }
-}
 
 
 
