--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -20,7 +20,6 @@ header {
   height: 12vh;
   margin: 4vh 5%;
   padding: 0;
-
   background: #fff;
   position: absolute;
   z-index: 2;
@@ -34,8 +33,13 @@ span {
   justify-content: center;
   align-content: space-between;
   align-items: center;
-  flex-direction: column;
-  position: relative; 
+  position: relative;
+
+  img {
+    height: 100%;
+    width: auto;
+    margin: 0 5%;
+  }
 }
 
 .slide {
@@ -67,7 +71,7 @@ a {
 
 #touch {position: absolute; opacity: 0; height: 0px;}    
 
-#touch:checked + .slide {height: 450%; z-index: 2; } 
+#touch:checked + .slide {height: 425%; z-index: 2; } 
 }
 
 .pust {
@@ -77,7 +81,7 @@ a {
 
 .card {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   margin-right: 5vw;
   margin-left: 5vw;
@@ -95,7 +99,6 @@ img {
 
 .txt {
   position: relative;
-  display:flex;
   padding: 8%;
   background-color: #fff;
   
@@ -119,3 +122,4 @@ img {
     font-size: calc(8px + 16 * (100vw / 1280));
 }}
 }
+
