--- a/style_contacts.css
+++ b/style_contacts.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
   box-sizing: border-box;
@@ -20,7 +20,6 @@ header {
   height: 12vh;
   margin: 4vh 5%;
   padding: 0;
-
   background: #fff;
   position: absolute;
   z-index: 2;
@@ -34,8 +33,13 @@ span {
   justify-content: center;
   align-content: space-between;
   align-items: center;
-  flex-direction: column;
-  position: relative; 
+  position: relative;
+
+  img {
+    height: 100%;
+    width: auto;
+    margin: 0 5%;
+  }
 }
 
 .slide {
@@ -67,7 +71,7 @@ a {
 
 #touch {position: absolute; opacity: 0; height: 0px;}    
 
-#touch:checked + .slide {height: 450%; z-index: 2; } 
+#touch:checked + .slide {height: 425%; z-index: 2; } 
 }
 
 .pust {
