--- a/catalog/naggets3.css
+++ b/catalog/naggets3.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
@@ -6,49 +7,104 @@
   padding: 0;
 }
 
- body {
+body {
   font-family: 'Open Sans', sans-serif;
-  background: #fff;
+  background: #f5f5f5;
   color: #000;
   margin: 0;
   padding: 0;
 }
 
 header {
-  padding: 8vh 0;
-  
-  ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: center;
+  width: 90%;
+  height: 12vh;
+  margin: 4vh 5%;
+  padding: 0;
+  background: #fff;
+  position: absolute;
+  z-index: 2;
+
+span {
+  height: 6vh;
+  margin: 3vh auto;
+  cursor : pointer;
+  display: flex;
+  font-size: calc(10px + 16 * (100vw / 1280));
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  position: relative;
+
+  img {
+    height: 100%;
+    width: auto;
+    margin: 0 5%;
   }
+}
+
+.slide {
+  height: 0;
+  width: 100%;
+  background: #fff;
   
-  a {
+  
+  position: absolute;
+  overflow: hidden;
+  transition: height .4s ease;
+  z-index: 2;
+
+li {
+  padding: 4vh 0;
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+a {
   font-size: calc(10px + 16 * (100vw / 1280));
   text-decoration: none;
-  padding: 0 3vw;
   color: #000;
-  }
+}
 }
 
-.container {
+#touch {position: absolute; opacity: 0; height: 0px;}    
 
-  display: flex;
-  vertical-align: middle;
-  margin: auto;
-  padding: 0 8%;
+#touch:checked + .slide {height: 425%; z-index: 2; } 
+}
 
-  height: 75vh;
-  width: 100vw;
+.pust {
+  width: 100%;
+  height: 20vh;
+}
+
+.container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-right: 5vw;
+  margin-left: 5vw;
+  margin-bottom: 4vh;
+  padding: 0;
+  list-style-type: none;
+  
+  font-family: 'Poopins', sans-serif;
 
 img {
-  height: 80%;
-  width: auto;
-  margin-top: 5%;
+  height: 100%;
+  max-width: 100%;
 }
 }
-.descr {padding-left:5%;
-  margin-top: 5%;
+.descr {
+  position: relative;
+  padding: 8%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  align-items: left;
+  flex-direction: column;
 p {
   font-size: calc(5px + 16 * (100vw / 1280));
   padding-bottom: 5%;
@@ -58,3 +114,4 @@ h1 {
   padding-bottom: 1%;
 }
 }
+
