--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -91,6 +91,10 @@ a {
   
   font-family: 'Poopins', sans-serif;
 
+  opacity: 0;
+  transform: translateX(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+
 img {
   height: 100%;
   max-width: 100%;
